--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
   background-color: rgb(179, 205, 224);
-  width: 35%;
+  /* width: 35%; */
   height: 100vh;
   display: flex;
   justify-content: center;
