--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 
 body {
   background-color: rgb(179, 205, 224);
-  /* width: 35%; */
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -37,7 +36,7 @@ h1 {
 .btnMaisUm {
   padding: 50px;
   font-size: 50px;
-  border: none;
+  border: solid 2px #329d32;
   border-radius: 50%;
   box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px,
     rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
